# prlgruzracer

./: CMakeLists.txt
assets/model/car/: polonez.mtl
src/car/: car.cpp  car.h  car_controller.cpp  car_controller.h  car_renderer.cpp  car_renderer.h
src/common/: singleton.h
src/core/: assets.cpp  assets.h  camera.cpp  camera.h  game.cpp  game.h  main.cpp
src/player/: player_controller.cpp  player_controller.h
src/renderer/: renderable.h  renderer.cpp  renderer.h
src/world/: world.cpp  world.h
